--- a/app/src/main/res/layout/activity_timer_on.xml
+++ b/app/src/main/res/layout/activity_timer_on.xml
@@ -69,13 +69,13 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
-        <!-- 과목 입력칸 -->
         <EditText
             android:textSize="22dp"
             android:id="@+id/subjectEditText"
             android:layout_width="120dp"
             android:layout_height="26dp"
-            android:layout_toRightOf="@+id/subject"
+            android:layout_toRightOf="@+id/subject">
+        </EditText>
 
         <TextView
             android:id="@+id/subject"
